# ai-test

./: .gitignore  .tool-versions  ice_breaker.py  llm_chat.py  notebook.py  pyproject.toml  readme.md  requirements.txt
