[tool.poetry]
name = "ai-test"
version = "0.1.0"
description = ""
authors = ["David Tam <davidtam@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "4.65.0"
transformers = "^4.45.2"
datasets = "2.11.0"
huggingface-hub = "^0.25.1"
accelerate = "0.18.0"
langchain = "^0.3.2"
langchain-openai = "^0.2.2"
langchainhub = "^0.1.21"
python-dotenv = "1.0.1"
langchain-ollama = "0.2.0"
tokenizers = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
